refactor(auth): eliminar Optional de casos de uso y unificar paginación en repositorio de asignaciones
**Cambios realizados:**

1. Eliminación de Optional en capa de aplicación (Rol y UserRolAssignment):
   - Los métodos findById, findByRolEnum, findByUserIdAndIsPrimary, etc., ya no retornan Optional.
   - Los servicios de aplicación lanzan excepción cuando el recurso no existe.
   - Los controladores simplifican su lógica y ControllerAdvice centraliza 404.

2. Unificación de paginación en UserRolAssignmentRepository:
   - Antes: List findByUserId(...) y List findByUserIdAndRolId(...)
   - Después: Page findByUserId(..., Pageable) y Page findByUserIdAndRolId(..., Pageable)

3. Refactorización de capas afectadas:
   - Infraestructura: nuevos métodos con paginación en JpaRepository y Adapter.
   - Dominio: ajuste de llamadas para trabajar con Page (getContent()).
   - Aplicación: métodos ahora reciben Pageable y retornan Page<ReadAssignmentDto>.
   - Controladores: endpoints de listado aceptan @PageableDefault y devuelven PageResponse.

4. Actualización de tests (UserRolAssignmentServiceTest, UserRolAssignmentApplicationServiceTest).

**Impacto:**
- API más consistente (paginación obligatoria para listados).
- Código más limpio (sin Optional en casos de uso).
- Centralización de errores 404.
- Mejor rendimiento en consultas de asignaciones (paginación a nivel de BD).